--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.2",
     "gsap": "^3.13.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.544.0",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
